# smth

./: .env  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: event.rs  lib.rs  ws.rs
entity/: Cargo.toml
entity/src/: prelude.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: inputs.rs  lib.rs  mutation.rs  query.rs
src/: main.rs
