[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json"] }
actix = "0.13.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
actix-web = { version = "4.6.0", features = ["secure-cookies"] }
log = "0.4.21"
bcrypt = "0.15.1"
actix-web-actors = "4.3.0"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
migration = {path = "../migration"}
entity = {path = "../entity"}
