[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.203", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]