[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.203", features = ["derive"] }

[dependencies.sea-orm]
version = "0.12.15"
features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }